update to create arrays using schema from s3

--- a/load_level2_data_from_local_tdb_zip.ipynb
+++ b/load_level2_data_from_local_tdb_zip.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "0bb18a35",
    "metadata": {},
    "outputs": [],
@@ -54,20 +54,98 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "id": "2ea988b6",
    "metadata": {},
    "outputs": [],
    "source": [
-    "#name of zipped array\n",
-    "filename = \"arrays/PB_B007_level2.tdb.zip\"\n",
-    "\n",
     "#name of unzipped array\n",
-    "uri = \"arrays/PB_B018_level2.tdb\"\n",
+    "uri = \"arrays/PB_B007_level2_2019-01-01T00:00:00.tdb\"\n",
+    "\n",
+    "#name of zipped array\n",
+    "filename = f\"{uri}.zip\"\n",
+    "\n",
+    "\n",
     "\n",
     "#unzip array\n",
     "with zipfile.ZipFile(filename, 'r') as zip_ref:\n",
     "    zip_ref.extractall(uri)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6477f68e",
+   "metadata": {},
+   "source": [
+    "## Merge with existing array \n",
+    "have to manually input array names currently"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "id": "5325ed06",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def merge_tdb(uri1, uri2):\n",
+    "    \n",
+    "    with tiledb.open(uri1, 'r') as A:\n",
+    "        dims1 = A.meta[\"dimensions\"]\n",
+    "    \n",
+    "    df = load_level2_tdb(uri2)\n",
+    "    data_types = list(df.index.get_level_values(0).unique())\n",
+    "    timeseries_list = list(df.index.get_level_values(1).unique())\n",
+    "    dims2 = {\"data_types\":data_types, \"timeseries\":timeseries_list}\n",
+    "    merged_dims = {**json.loads(dims1), **dims2}\n",
+    "\n",
+    "    \n",
+    "    with tiledb.open(uri1, 'w') as A:\n",
+    "        A.meta[\"dimensions\"] = json.dumps(merged_dims)\n",
+    "    print(f\"writing data from {uri2} to {uri1}\")\n",
+    "    tiledb.from_pandas(uri=uri1,\n",
+    "                       dataframe=df,\n",
+    "                       index_dims=['data_type', 'timeseries', 'time'],\n",
+    "                       mode='append'\n",
+    "                        )\n",
+    "    print(f\"cleaning up {uri1}\")\n",
+    "    tiledb.consolidate(uri1)\n",
+    "    tiledb.vacuum(uri1)\n",
+    "    print(f\"removing {uri2}\")\n",
+    "    shutil.rmtree(uri2)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "id": "826841c1",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "arrays/PB_B007_level2.tdb 2019-01-01T00:00:00.000000 2022-12-30T23:50:00.000000\n",
+      "arrays/PB_B007_level2_2019-01-01T00:00:00.tdb 2019-01-01T00:00:00.000000 2021-01-01T00:00:00.000000\n",
+      "writing\n",
+      "cleaning up\n",
+      "arrays/PB_B007_level2.tdb 2019-01-01T00:00:00.000000 2022-12-30T23:50:00.000000\n"
+     ]
+    }
+   ],
+   "source": [
+    "uri1 = \"arrays/PB_B007_level2.tdb\"\n",
+    "uri2 = \"arrays/PB_B007_level2_2019-01-01T00:00:00.tdb\"\n",
+    "\n",
+    "with tiledb.open(uri1, 'r') as A:\n",
+    "    print(uri1, A.nonempty_domain()[2][0],A.nonempty_domain()[2][1])\n",
+    "\n",
+    "with tiledb.open(uri2, 'r') as A:\n",
+    "    print(uri2, A.nonempty_domain()[2][0],A.nonempty_domain()[2][1])\n",
+    "merge_tdb(uri1, uri2)\n",
+    "\n",
+    "with tiledb.open(uri1, 'r') as A:\n",
+    "    print(uri1, A.nonempty_domain()[2][0],A.nonempty_domain()[2][1])"
    ]
   },
   {
@@ -148,7 +226,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "68bbbe63",
    "metadata": {
     "code_folding": []
