--- a/docs/source/notebooks/level2.ipynb
+++ b/docs/source/notebooks/level2.ipynb
@@ -7,19 +7,25 @@
    "source": [
     "# Example of running level 2 processing steps\n",
     "\n",
-    "In this notebook, the following steps are perfromed:\n",
+    "In this notebook, the following steps are performed:\n",
     "- [Acquire, decimate, convert the data](#get)\n",
+    "\n",
     "- [Corrections](#corrections)\n",
+    "\n",
     "    - [Trend](#corrections)\n",
+    "\n",
     "    - [Tides](#tides)\n",
+    "\n",
     "    - [Atmospheric Pressure](#pressure)\n",
+    "\n",
     "    - [Offsets](#offsets)\n",
+    "    \n",
     "    - [Regional Strain Conversion](#regionals)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "id": "a70c599f",
    "metadata": {
     "tags": []
@@ -64,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "id": "b8f18a2f",
    "metadata": {
     "tags": []
@@ -112,7 +118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "id": "af731164",
    "metadata": {
     "tags": []
@@ -122,13 +128,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "IV TSM5 Loading T0 LS* from 2023-01-01T00:00:00 to 2023-01-10T00:00:00 from Earthscope DMC miniseed\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
+      "IV TSM5 Loading T0 LS* from 2023-01-01T00:00:00 to 2023-01-10T00:00:00 from Earthscope DMC miniseed\n",
       "    Trace 1. 2023-01-01T00:00:00.000000Z:2023-01-10T00:00:00.000000Z mapping LS1 to CH0\n",
       "    Trace 2. 2023-01-01T00:00:00.000000Z:2023-01-10T00:00:00.000000Z mapping LS2 to CH1\n",
       "    Trace 3. 2023-01-01T00:00:00.000000Z:2023-01-10T00:00:00.000000Z mapping LS3 to CH2\n",
@@ -136,7 +136,6 @@
       "    Found 0 epochs with nans, 5.0 epochs with 999999s, and 0 missing epochs.\n",
       "    Total missing data is 0.0%\n",
       "Converting missing data from 999999 to nan\n",
-      "  Converting 999999 values to nan\n",
       "    Found 5 epochs with nans, 0.0 epochs with 999999s, and 0 missing epochs.\n",
       "    Total missing data is 0.0%\n",
       "IV.TSM5.T0.LS*\n",
@@ -172,7 +171,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "id": "d075a0fb-b29a-404a-b127-6198010e5362",
    "metadata": {},
    "outputs": [
@@ -181,18 +180,77 @@
      "output_type": "stream",
      "text": [
       "Attributes:\n",
-      " dict_keys(['data', 'columns', 'quality_df', 'series', 'units', 'level', 'period', 'network', 'station', 'name', 'nans', 'nines', 'epochs', 'gap_percentage'])\n",
-      "Functions:\n",
-      " ['apply_calibration_matrix', 'apply_corrections', 'butterworth_filter', 'calculate_magnitude', 'calculate_offsets', 'calculate_pressure_correction', 'calculate_tide_correction', 'check_for_gaps', 'decimate_1s_to_300s', 'dynamic_strain', 'interpolate', 'linear_trend_correction', 'linearize', 'plot', 'remove_999999s', 'save_csv', 'set_data', 'set_initial_level_flags', 'set_initial_quality_flags', 'set_initial_version', 'set_local_tdb_uri', 'set_period', 'set_s3_tdb_uri', 'set_units', 'show_flagged_data', 'show_flags', 'stats']\n"
+      "  data\n",
+      "  columns\n",
+      "  quality_df\n",
+      "  series\n",
+      "  units\n",
+      "  level\n",
+      "  period\n",
+      "  network\n",
+      "  station\n",
+      "  name\n",
+      "  nans\n",
+      "  nines\n",
+      "  epochs\n",
+      "  gap_percentage\n"
      ]
     }
    ],
    "source": [
     "# Let's look at all available attributes and functions of strain_raw\n",
     "# All classes and functions can be analyzed in this way\n",
-    "print('Attributes:\\n',vars(strain_raw).keys())\n",
+    "print('Attributes:')\n",
+    "for var in vars(strain_raw).keys():\n",
+    "    print(f\"  {var}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "890807a0",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Functions\n",
+      "  apply_calibration_matrix\n",
+      "  apply_corrections\n",
+      "  butterworth_filter\n",
+      "  calculate_magnitude\n",
+      "  calculate_offsets\n",
+      "  calculate_pressure_correction\n",
+      "  calculate_tide_correction\n",
+      "  check_for_gaps\n",
+      "  decimate_1s_to_300s\n",
+      "  dynamic_strain\n",
+      "  interpolate\n",
+      "  linear_trend_correction\n",
+      "  linearize\n",
+      "  plot\n",
+      "  remove_999999s\n",
+      "  save_csv\n",
+      "  set_data\n",
+      "  set_initial_level_flags\n",
+      "  set_initial_quality_flags\n",
+      "  set_initial_version\n",
+      "  set_local_tdb_uri\n",
+      "  set_period\n",
+      "  set_s3_tdb_uri\n",
+      "  set_units\n",
+      "  show_flagged_data\n",
+      "  show_flags\n",
+      "  stats\n"
+     ]
+    }
+   ],
+   "source": [
     "functs = [func for func in dir(strain_raw) if callable(getattr(strain_raw,func)) and func.startswith('__') == False]\n",
-    "print('Functions:\\n',functs)"
+    "print('Functions')\n",
+    "for funct in functs:\n",
+    "    print(f\"  {funct}\")"
    ]
   },
   {
@@ -944,14 +1002,6 @@
     "regional_corrected.plot(rainfall=rainfall)\n",
     "regional_corrected.stats()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "ca8163b3-8368-4f89-b158-797f4f6e55eb",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
