--- a/docs/source/notebooks/baytap_demo.ipynb
+++ b/docs/source/notebooks/baytap_demo.ipynb
@@ -5,9 +5,17 @@
    "id": "22696cf6",
    "metadata": {},
    "source": [
-    "# BAYTAP-08 Demo using earthscopestraintools\n",
-    "### Notebook showing use of BAYTAP-08 to calculate tidal parameters and pressure response coefficients\n",
-    "### Also demonstrates using these processing metadata to create tidal and pressure correction timeseries"
+    "# BAYTAP-08 Demo \n",
+    "Uses earthscopestraintools library to\n",
+    "- download strainmeter data and pressure data in miniseed format\n",
+    "- convert raw data to units of strain\n",
+    "- detrend and automatically estimate and remove offsets to create inputs for BAYTAP-08\n",
+    "- use BAYTAP-08 to calculate the tidal constituents and pressure response coefficients \n",
+    "- generate and remove trend, tidal (using SPOTL), pressure, and offset correction time series from original data\n",
+    "\n",
+    "Not yet implemented here:\n",
+    "- calculate signal-to-noise ratio for M2 and O1 tidal bands\n",
+    "- containerized use of Cleanstrain+ for offset removal"
    ]
   },
   {
@@ -60,7 +68,7 @@
    "id": "c18b259a",
    "metadata": {},
    "source": [
-    "### Uncorrected Strain data"
+    "#### Uncorrected Strain data"
    ]
   },
   {
@@ -213,12 +221,12 @@
    "id": "c111ee2f",
    "metadata": {},
    "source": [
-    "### Initial trend correction"
+    "#### Initial trend correction"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 7,
    "id": "97228dc7",
    "metadata": {},
    "outputs": [
@@ -265,7 +273,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 8,
    "id": "9c8e6323",
    "metadata": {},
    "outputs": [
@@ -304,8 +312,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "bf75a6db",
+   "metadata": {},
+   "source": [
+    "#### Barometric Pressure Data"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 9,
    "id": "7e49650c",
    "metadata": {},
    "outputs": [
@@ -347,7 +363,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 10,
    "id": "d456488a",
    "metadata": {},
    "outputs": [
@@ -394,7 +410,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 11,
    "id": "3bcf693b",
    "metadata": {},
    "outputs": [
@@ -409,7 +425,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "5e50441e6ef71c606f7573f14019787e416d04ba4927934e0587677ba452d0e1\n",
+      "4a85502584897919dd22518a0b688b748b994dc27586c592c9ee651ba33730ce\n",
       "Docker container started.\n",
       "Atmospheric pressure responses in microstrain/hPa and tidal parameters in degrees/nanostrain \n",
       "baytap\n",
@@ -497,7 +513,7 @@
        "  ('CH3', 'S2', 'doodson'): '2 2-2 0 0 0'}}"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -515,7 +531,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 12,
    "id": "aa5b14e0",
    "metadata": {},
    "outputs": [
@@ -523,8 +539,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Calculated {'CH0': -0.010378, 'CH1': -0.00841479, 'CH2': -0.00692327, 'CH3': -0.0067322}\n",
-      "Published {'CH0': -0.012, 'CH1': -0.01, 'CH2': -0.0079, 'CH3': -0.0076}\n"
+      "Calculated: {'CH0': -0.010378, 'CH1': -0.00841479, 'CH2': -0.00692327, 'CH3': -0.0067322}\n",
+      "Published: {'CH0': -0.012, 'CH1': -0.01, 'CH2': -0.0079, 'CH3': -0.0076}\n"
      ]
     }
    ],
@@ -537,7 +553,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 13,
    "id": "7dbc08cc",
    "metadata": {},
    "outputs": [
@@ -563,6 +579,7 @@
    "metadata": {},
    "source": [
     "## Calculate and plot corrections\n",
+    "\n",
     "Start from the original gauge microstrain"
    ]
   },
@@ -571,12 +588,12 @@
    "id": "d5a91535-842d-4145-a35b-5eb06334411f",
    "metadata": {},
    "source": [
-    "### Calculate a simple linear trend correction"
+    "#### Calculate a simple linear trend correction"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 14,
    "id": "23e7b908-a510-4676-b906-f15954730444",
    "metadata": {},
    "outputs": [
@@ -618,12 +635,12 @@
    "id": "f9ba1036-1106-402b-9f3a-3b1d174d3977",
    "metadata": {},
    "source": [
-    "### Calculate a pressure correction using the generated pressure responses"
+    "#### Calculate a pressure correction using the generated pressure responses"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 15,
    "id": "64754d92",
    "metadata": {},
    "outputs": [
@@ -634,13 +651,7 @@
       "Calculating pressure correction\n",
       "    Found 0 epochs with nans, 0.0 epochs with 999999s, and 0 missing epochs.\n",
       "    Total missing data is 0.0%\n",
-      "Applying corrections\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
+      "Applying corrections\n",
       "    Found 0 epochs with nans, 0.0 epochs with 999999s, and 0 missing epochs.\n",
       "    Total missing data is 0.0%\n"
      ]
@@ -672,13 +683,13 @@
    "id": "0c51413f-e511-40bb-af80-1117903f3e05",
    "metadata": {},
    "source": [
-    "### Calculate a tidal correction using the generated tidal parameters\n",
+    "#### Calculate a tidal correction using the generated tidal parameters\n",
     "This function downloads and runs a SPOTL image, and uses the hartid program to generate a timeseries of predicted tides at this location"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 16,
    "id": "6046a394-b493-4056-9441-d094f794b977",
    "metadata": {},
    "outputs": [
@@ -720,13 +731,13 @@
    "id": "7517bd7b-cc94-4c80-b9ac-58999ddbda1d",
    "metadata": {},
    "source": [
-    "### Calculate offsets \n",
+    "#### Calculate offsets \n",
     "Offsets in this section are automatically detected via a simple first differencing algorithm. The best approach is to first correct for other known changes (tides, pressure, trend), then to apply the calculate_offsets function. This function finds jumps between consecutive datapoints that are above a cutoff limit, which is assigned from a user-specified value multiplied by a user-specified percentile of all first differences calculated for the gauge. For example, if a multiplier of 10 and percentile of 75% are used on a dataset whose first difference 75th percentile is 2 nanostrain, any jump in the data above 20 nanostrain will be flagged as an offset. This method is not perfect, but works well for certain situations.\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 17,
    "id": "b6e64025-3ed7-4fa0-9ace-3e322198fed5",
    "metadata": {},
    "outputs": [
@@ -769,12 +780,12 @@
    "id": "45f27a20-b83f-439f-a62f-0812c27fe223",
    "metadata": {},
    "source": [
-    "### Plot fully corrected vs trend corrected data"
+    "## Plot fully corrected vs trend corrected data"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 18,
    "id": "de8fc3f2-d1cc-4915-b254-8bc86eeb880b",
    "metadata": {},
    "outputs": [
