--- a/docs/source/notebooks/baytap_demo.ipynb
+++ b/docs/source/notebooks/baytap_demo.ipynb
@@ -274,7 +274,7 @@
    "id": "b8b82ecd",
    "metadata": {},
    "source": [
-    "### Initial offset correction\n",
+    "#### Initial offset correction\n",
     "Offsets in this section are automatically detected via a simple first differencing algorithm. The best approach is to first correct for other known changes (tides, pressure, trend), then to apply the calculate_offsets function. This function finds jumps between consecutive datapoints that are above a cutoff limit, which is assigned from a user-specified value multiplied by a user-specified percentile of all first differences calculated for the gauge. For example, if a multiplier of 10 and percentile of 75% are used on a dataset whose first difference 75th percentile is 2 nanostrain, any jump in the data above 20 nanostrain will be flagged as an offset. This method is not perfect, but works well for certain situations.\n"
    ]
   },
